--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,4 @@
+@import './globals';
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@200;400;700&display=swap');
 
 html {
@@ -8,17 +9,14 @@ html {
 }
 
 body {
-  margin: 1em;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  margin: 2em;
+  font-family: $body-font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: white;
 }
