--- a/frontend/src/components/EpisodeResult.scss
+++ b/frontend/src/components/EpisodeResult.scss
@@ -4,13 +4,14 @@
   padding: 0.5em 0.75em;
   border-radius: 0.5em;
 
+  
   &:hover {
     cursor: pointer;
     background-color: rgba($primary-blue, 0.3);
   }
-
-  em {
-    background-color: rgba($primary-blue, 0.5);
-    font-style: normal;
+  
+  &.selected {
+    cursor: default;
+    background-color: rgba($primary-blue, 0.15);
   }
 }
