--- a/frontend/src/routes/root.scss
+++ b/frontend/src/routes/root.scss
@@ -26,7 +26,7 @@
 
 header {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
   border-bottom: 1px solid $fg-gray;
   margin-bottom: 1em;
