wip share dialog

--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -1,6 +1,8 @@
 $primary-blue: rgb(0, 189, 189);
+$secondary-lighter-blue: rgb(78, 206, 206);
 $secondary-yellow: rgb(255, 170, 0);
 $secondary-red: rgb(255, 0, 0);
+$tertiary-lighter-green: rgb(88, 230, 88);
 $fg-gray: #aaa;
 $bg-gray: #222;
 
