--- a/frontend/src/components/EpisodeResult.scss
+++ b/frontend/src/components/EpisodeResult.scss
@@ -3,15 +3,22 @@
 .result {
   padding: 0.5em 0.75em;
   border-radius: 0.5em;
-
+  position: relative;
   
   &:hover {
     cursor: pointer;
-    background-color: rgba($primary-blue, 0.3);
+    background-color: rgba($primary-blue, 0.2);
   }
   
   &.selected {
     cursor: default;
-    background-color: rgba($primary-blue, 0.15);
+    background-color: rgba($primary-blue, 0.4);
+  }
+
+  .playing {
+    position: absolute;
+    right: 0;
+    margin: 0 0.5em;
+    height: 1.4em;
   }
 }
