improve now playing display

--- a/frontend/src/components/ShareDialog.scss
+++ b/frontend/src/components/ShareDialog.scss
@@ -3,7 +3,7 @@
 dialog.share {
   margin: 0;
   color: white;
-  background-color: $bg-gray;
+  background-color: #222;
   border-color: $fg-gray;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
 
