--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -3,8 +3,8 @@ $secondary-lighter-blue: rgb(78, 206, 206);
 $secondary-yellow: rgb(255, 170, 0);
 $secondary-red: rgb(255, 0, 0);
 $tertiary-lighter-green: rgb(88, 230, 88);
-$fg-gray: #aaa;
-$bg-gray: #222;
+$fg-gray: rgba(255, 255, 255, 0.65);
+$bg-gray: rgba(255, 255, 255, 0.125);
 
 $body-font: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
