--- a/frontend/src/components/MediaPlayer.scss
+++ b/frontend/src/components/MediaPlayer.scss
@@ -39,19 +39,37 @@
     }
   }
 
+  .media-player {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+
+    &.audio {
+      gap: 1em;
+    }
+  }
+
+  .actions {
+    margin-top: 0.5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+  }
+
   button.share {
     display: flex;
     align-items: end;
-    gap: 0.25em;
+    gap: 0.5em;
     padding: 0.5em;
 
     img {
-      width: 1.5em;
+      height: 1.4em;
     }
   }
 
   audio,
   video {
     width: 100%;
+    border-radius: 0.5em 0 0 0.5em;
   }
 }
