--- a/frontend/src/components/ShareDialog.scss
+++ b/frontend/src/components/ShareDialog.scss
@@ -4,7 +4,8 @@ dialog.share {
   margin: 0;
   color: white;
   background-color: #222;
-  border-color: $fg-gray;
+  border: none;
+  border-radius: 0.5em;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
 
   label {
@@ -13,7 +14,7 @@ dialog.share {
   }
 
   input[type=checkbox] {
-    margin-right: 0.5em;
+    margin: 0 0.5em 0 0;
   }
 
   .actions {
@@ -51,4 +52,10 @@ dialog.share {
       }
     }
   }
+}
+
+.bg-mask {
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  // z-index: -1000;
 }
