query params for episode, query, timecode

--- a/frontend/src/components/MediaPlayer.scss
+++ b/frontend/src/components/MediaPlayer.scss
@@ -46,7 +46,7 @@
     border-radius: 0.5em;
   }
 
-  .actions {
+  .media-actions {
     margin-top: 0.5em;
     display: flex;
     justify-content: space-between;
