--- a/frontend/src/components/ShareDialog.scss
+++ b/frontend/src/components/ShareDialog.scss
@@ -17,7 +17,7 @@ dialog.share {
     margin: 0 0.5em 0 0;
   }
 
-  .actions {
+  .share-actions {
     display: flex;
     justify-content: space-between;
     margin-top: 1em;
