code organization, add media queries

--- a/frontend/src/components/EpisodeInfo.scss
+++ b/frontend/src/components/EpisodeInfo.scss
@@ -31,6 +31,10 @@
       font-weight: bold;
       color: white;
     }
+
+    @include tablet {
+      flex-wrap: wrap;
+    } 
   }
 
   .playing {
