--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -17,3 +17,19 @@ $logo-font: 'Bebas Neue', sans-serif;
   background-color: rgba($secondary-yellow, 0.5);
   font-style: normal;
 }
+
+@mixin narrow {
+  @media (max-width: 800px) { @content; }
+}
+
+@mixin tablet {
+  @media (max-width: 640px) { @content; }
+}
+
+@mixin phone-lg {
+  @media (max-width: 480px) { @content; }
+}
+
+@mixin phone-sm {
+  @media (max-width: 400px) { @content; }
+}
