--- a/frontend/src/components/MediaPlayer.module.scss
+++ b/frontend/src/components/MediaPlayer.module.scss
@@ -1,12 +1,12 @@
 @import '../globals';
 
-#media-player {
+#mediaPlayer {
   position: relative;
   padding-bottom: 1em;
   margin-bottom: 1em;
   border-bottom: 1px solid $fg-gray;
 
-  .episode-info {
+  .episodeInfo {
     margin: 1em 0;
 
     h3 {
@@ -28,7 +28,7 @@
     color: $fg-gray;
   }
 
-  .close-player {
+  .closePlayer {
     position: absolute;
     right: 0;
     background: none;
@@ -39,14 +39,14 @@
     }
   }
 
-  .media-player {
+  .mediaPlayer {
     display: grid;
     grid-template-columns: 2fr 1fr;
     background: $bg-gray;
     border-radius: 0.5em;
   }
 
-  .media-actions {
+  .mediaActions {
     margin-top: 0.5em;
     display: flex;
     justify-content: space-between;
