--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -6,6 +6,7 @@ $secondary-red-lighter: rgb(255, 64, 64);
 $tertiary-green-lighter: rgb(88, 230, 88);
 $fg-gray: rgba(255, 255, 255, 0.65);
 $bg-gray: rgba(255, 255, 255, 0.125);
+$bg-gray-lighter: rgba(255, 255, 255, 0.25);
 $bg-gray-opaque: rgb(32, 32, 32);
 $bg-gray-lighter-opaque: rgb(64, 64, 64);
 
