custom progress bar for transcript

--- a/frontend/src/components/TranscriptSearch.module.scss
+++ b/frontend/src/components/TranscriptSearch.module.scss
@@ -40,6 +40,10 @@
       padding-left: 2.5em;
     }
   }
+  
+  em {
+    @include highlight;
+  }
 
   .backToTranscript {
     position: absolute;
