--- a/frontend/src/components/MediaPlayer.module.scss
+++ b/frontend/src/components/MediaPlayer.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   margin-bottom: 1em;
   border-bottom: 1px solid $fg-gray;
+  padding-bottom: 1em;
 
   .episodeInfo {
     margin: 1em 2em 1em 0;
@@ -58,7 +59,7 @@
   }
 
   .mediaActions {
-    margin: 1em 0;
+    margin: 1em 0 0;
     display: flex;
     justify-content: space-between;
     align-items: start;
@@ -69,7 +70,7 @@
     display: flex;
     align-items: flex-end;
     gap: 0.25em;
-    padding: 0.5em 1.2em 0.6em;
+    padding: 0.5em 1.2em 0.65em;
     background-color: $bg-gray;
     border-radius: 2em;
 
