--- a/frontend/src/components/EpisodeSearchBar.module.scss
+++ b/frontend/src/components/EpisodeSearchBar.module.scss
@@ -22,6 +22,10 @@
     flex-shrink: 1.1;
     font-size: 1.5em;
     border-radius: 2rem 0 0 2rem;
+
+    &::placeholder {
+      color: $fg-gray;
+    }
   }
 
   button {
@@ -30,29 +34,6 @@
 
     img {
       width: 2em;
-    }
-  }
-}
-
-.results {
-  ol {
-    max-height: min(60vh, 20em);
-    overflow-y: scroll;
-    list-style: none;
-    padding: 0.75em;
-    margin: 0.5em 0;
-    background-color: $bg-gray;
-    border-radius: 0.5em;
-  }
-
-  h2 {
-    font-size: 1.5em;
-    font-weight: 200;
-    margin: 1em 0 0.5em;
-    text-transform: uppercase;
-
-    .numResults {
-      font-weight: normal;
     }
   }
 }
