--- a/frontend/src/components/EpisodeSearch.module.scss
+++ b/frontend/src/components/EpisodeSearch.module.scss
@@ -1,9 +1,7 @@
 @import '../globals';
 
 .results {
-  ol {
-    max-height: min(60vh, 20em);
-    overflow-y: scroll;
+  & > ol {
     list-style: none;
     padding: 0.75em;
     margin: 0.5em 0;
@@ -16,7 +14,9 @@
     font-weight: 200;
     margin: 1em 0 0.5em;
     text-transform: uppercase;
+  }
 
+  :global {
     .numResults {
       font-weight: normal;
     }
