--- a/frontend/src/components/ShareDialog.module.scss
+++ b/frontend/src/components/ShareDialog.module.scss
@@ -27,6 +27,10 @@
       align-items: center;
       padding: 0;
 
+      &:hover {
+        filter: brightness(1.4);
+      }
+
       &.close {
         img {
           height: 1.5em;
