--- a/frontend/src/routes/root.scss
+++ b/frontend/src/routes/root.scss
@@ -88,7 +88,7 @@ li.selectable {
   padding: 0.5em 0.75em;
   border-radius: 0.5em;
   
-  &:hover {
+  &:hover:not(.selected) {
     cursor: pointer;
     background-color: rgba(255,255,255, 0.15);
   }
