code reorg, styling fixes

--- a/frontend/src/routes/root.scss
+++ b/frontend/src/routes/root.scss
@@ -59,8 +59,7 @@ footer {
 
 input[type=search] {
   width: 100%;
-  font-family: $body-font,
-  sans-serif;
+  font-family: $body-font, sans-serif;
   background-color: $bg-gray;
   color: white;
   border-color: transparent;
