--- a/frontend/src/components/EpisodeTranscriptSearch.module.scss
+++ b/frontend/src/components/EpisodeTranscriptSearch.module.scss
@@ -28,6 +28,7 @@
   }
 
   input[type=search] {
+    font-size: 0.9em;
     border-radius: 0.5em 0 0 0.5em;
     background-color: $bg-gray-lighter-opaque;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -43,7 +44,7 @@
 
   .backToTranscript {
     position: absolute;
-    padding: 0.5em;
+    padding: 0.6em;
 
     img {
       height: 1.5em;
