--- a/frontend/src/components/ShareDialog.module.scss
+++ b/frontend/src/components/ShareDialog.module.scss
@@ -39,7 +39,7 @@
       }
 
       &.copyLink {
-        color: $secondary-blue-lighter;
+        color: $primary-blue-lighter;
 
         &.copied {
           color: $tertiary-green-lighter;
