--- a/frontend/src/components/TranscriptSearchResults.module.scss
+++ b/frontend/src/components/TranscriptSearchResults.module.scss
@@ -18,12 +18,13 @@
   .hits {
     list-style: none;
     padding: 0;
+    margin-bottom: 0;
     background: none;
 
     li {
       padding: 0.25em;
       display: grid;
-      // fix width so that all hit text lines up vertically
+      // fix width so that all hit text is aligned vertically
       grid-template-columns: 6.5ch 1fr;
     }
   }
