--- a/frontend/src/components/MediaPlayer/ShareDialog.module.scss
+++ b/frontend/src/components/MediaPlayer/ShareDialog.module.scss
@@ -7,6 +7,7 @@
   border: none;
   border-radius: 0.5em;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
+  z-index: 100;
 
   label {
     display: block;
@@ -61,5 +62,6 @@
 .bgMask {
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
-  // z-index: -1000;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.4);
 }
