--- a/frontend/src/routes/root.scss
+++ b/frontend/src/routes/root.scss
@@ -81,6 +81,7 @@ button.search {
   background-color: $primary-blue;
   display: flex;
   align-items: center;
+  border: none;
 }
 
 li.selectable {
