fix button styles

--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -1,5 +1,6 @@
 $primary-blue: rgb(0, 189, 189);
 $primary-blue-lighter: rgb(78, 206, 206);
+$primary-blue-lightest: rgb(105, 255, 255);
 $secondary-yellow: rgb(255, 170, 0);
 $secondary-red: rgb(255, 0, 0);
 $secondary-red-lighter: rgb(255, 64, 64);
