--- a/frontend/src/components/EpisodeSearchResults.module.scss
+++ b/frontend/src/components/EpisodeSearchResults.module.scss
@@ -19,15 +19,17 @@
     bottom: 0;
     width: 100%;
     padding: 1em 1em 0.5em;
+    border: none;
     background: linear-gradient(
       0deg,
       $bg-gray-opaque 0%,
       rgba($bg-gray-opaque, 0.7) 70%,
       rgba($bg-gray-opaque, 0) 100%
     );
+    color: $primary-blue-lighter;
 
     &:hover {
-      color: $primary-blue-lighter;
+      color: $primary-blue-lightest;
     }
   }
 }
