--- a/frontend/src/components/MediaPlayer/ShareDialog.module.scss
+++ b/frontend/src/components/MediaPlayer/ShareDialog.module.scss
@@ -27,6 +27,7 @@
       display: flex;
       align-items: center;
       padding: 0;
+      border: none;
 
       &:hover {
         filter: brightness(1.4);
