use react router for timecode state management

--- a/frontend/src/components/EpisodeSearchResults.module.scss
+++ b/frontend/src/components/EpisodeSearchResults.module.scss
@@ -12,6 +12,11 @@
       max-height: 60vh;
       overflow-y: auto;
     }
+
+    a {
+      display: block;
+      text-decoration: none;
+    }
   }
 
   .moreResults {
