--- a/frontend/src/routes/about.module.scss
+++ b/frontend/src/routes/about.module.scss
@@ -3,8 +3,8 @@
 .about {
   max-width: 640px;
   margin: 0 auto 30vw;
-  background-color: $bg-gray;
-  padding: 1em 2em;
-  border-radius: 0.5em;
+  // background-color: $bg-gray;
+  padding: 0 1em;
+  // border-radius: 0.5em;
   line-height: 1.4;
 }
