--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -15,6 +15,8 @@ $body-font: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'O
 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 $logo-font: 'Bebas Neue', sans-serif;
 
+$article-width: 640px;
+
 @mixin transcript-line {
   list-style: none;
   line-height: 1.35;
