--- a/frontend/src/routes/root.module.scss
+++ b/frontend/src/routes/root.module.scss
@@ -10,17 +10,17 @@ header {
 
   nav {
     display: flex;
+    flex-wrap: wrap;
     column-gap: 1em;
+    row-gap: 0.5em;
 
     a {
       text-decoration: none;
 
-      &:hover {
-        text-decoration: underline;
-      }
-
       &.active {
         font-weight: bold;
+        border-bottom: 2px solid white;
+        padding-bottom: 2px;
       }
     }
   }
