--- a/frontend/src/routes/404.module.scss
+++ b/frontend/src/routes/404.module.scss
@@ -15,6 +15,10 @@
     font-size: 6em;
   }
 
+  .search {
+    font-size: 1.2em;
+  }
+
   .narration {
     font-style: italic;
     line-height: 1.4;
