--- a/frontend/src/components/MediaPlayer/index.module.scss
+++ b/frontend/src/components/MediaPlayer/index.module.scss
@@ -7,10 +7,12 @@
   padding-bottom: 1em;
 
   .episodeInfo {
-    margin: 1em 2em 1em 0;
+    margin: 0 2em 1em 0;
+    padding-top: 1rem;
 
     h3 {
       font-size: 2.5em;
+      line-height: 1.1;
     }
 
     p {
@@ -30,6 +32,7 @@
 
   .closePlayer {
     position: absolute;
+    top: 1rem;
     right: 0;
     background: none;
     background-color: $bg-gray;
