--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -63,6 +63,7 @@ input[type=search] {
   border-style: solid;
   border-width: 2px 0 2px 2px;
   padding: 0.5em 1em;
+  text-shadow: 1px 1px black;
   @include frosted-glass;
 
   &:focus {
