--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -92,10 +92,13 @@ button.search {
   padding: 0.5em 0.75em;
   border-radius: 0.5em;
   
-  &:hover:not(.selected) {
-    cursor: pointer;
-    background-color: rgba(255,255,255, 0.15);
+  &:hover {
     color: white;
+  
+    &:not(.selected) {
+      cursor: pointer;
+      background-color: rgba(255,255,255, 0.15);
+    }
   }
 }
 
