--- a/frontend/src/routes/root.module.scss
+++ b/frontend/src/routes/root.module.scss
@@ -12,7 +12,7 @@ header {
     flex-wrap: wrap;
     column-gap: 1em;
     row-gap: 0.5em;
-    margin-bottom: 0.25em;
+    margin: 0 0 0.25em 1em;
 
     a {
       text-decoration: none;
