don't shrink some typography on mobile

--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -20,7 +20,7 @@ $article-width: 640px;
 @mixin transcript-line {
   list-style: none;
   line-height: 1.35;
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 
 @mixin frosted-glass {
