--- a/frontend/src/components/MediaPlayer/ShareDialog.module.scss
+++ b/frontend/src/components/MediaPlayer/ShareDialog.module.scss
@@ -8,6 +8,7 @@
   border-radius: 0.5em;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
   z-index: 100;
+  font-size: 1rem;
 
   label {
     display: block;
