--- a/frontend/src/routes/root.module.scss
+++ b/frontend/src/routes/root.module.scss
@@ -13,6 +13,7 @@ header {
     column-gap: 1em;
     row-gap: 0.5em;
     margin: 0 0 0.25em 1em;
+    font-size: 1rem;
 
     a {
       text-decoration: none;
@@ -41,13 +42,13 @@ footer {
     font-size: 4em;
     line-height: 0.9;
     margin: 0;
-    letter-spacing: 1px;
+    letter-spacing: 0.01em;
 
     .searchHeading {
       font-family: $body-font;
       font-weight: 200;
       font-size: 0.95em;
-      letter-spacing: -1px;
+      letter-spacing: normal;
     }
   }
 
