use svg img for down arrow for mobile support

--- a/frontend/src/components/EpisodeSearchResults.module.scss
+++ b/frontend/src/components/EpisodeSearchResults.module.scss
@@ -35,6 +35,14 @@
 
     &:hover {
       color: $primary-blue-lightest;
+
+      img {
+        filter: brightness(125%);
+      }
+    }
+
+    img {
+      height: 1ch;
     }
   }
 }
