right align nav items

--- a/frontend/src/routes/root.module.scss
+++ b/frontend/src/routes/root.module.scss
@@ -9,6 +9,7 @@ header {
 
   nav {
     display: flex;
+    justify-content: flex-end;
     flex-wrap: wrap;
     column-gap: 1em;
     row-gap: 0.5em;
