don't shrink transcript search bar on mobile

--- a/frontend/src/components/MediaPlayer/TranscriptSearch.module.scss
+++ b/frontend/src/components/MediaPlayer/TranscriptSearch.module.scss
@@ -26,7 +26,7 @@
   }
 
   input[type=search] {
-    font-size: 0.9em;
+    font-size: 0.9rem;
     border-radius: 0.5em 0 0 0.5em;
     background-color: $bg-gray-lighter-opaque;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
