--- a/frontend/src/routes/root.module.scss
+++ b/frontend/src/routes/root.module.scss
@@ -15,6 +15,7 @@ header {
     row-gap: 0.5em;
     margin: 0 0 0.25em 1em;
     font-size: 1rem;
+    text-align: right;
 
     a {
       text-decoration: none;
