--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -10,12 +10,37 @@ $bg-gray: rgba(255, 255, 255, 0.125);
 $bg-gray-lighter: rgba(255, 255, 255, 0.25);
 $bg-gray-opaque: rgb(32, 32, 32);
 $bg-gray-lighter-opaque: rgb(64, 64, 64);
+$bg-gray-lightest-opaque: rgb(96, 96, 96);
 
 $body-font: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 $logo-font: 'Bebas Neue', sans-serif;
 
 $article-width: 640px;
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 @mixin transcript-line {
   list-style: none;
