keep episode number and date on same line

--- a/frontend/src/components/EpisodeInfo.module.scss
+++ b/frontend/src/components/EpisodeInfo.module.scss
@@ -33,6 +33,11 @@
     } 
   }
 
+  .metadata {
+    display: flex;
+    column-gap: 0.9em;
+  }
+
   .playing {
     margin-right: -0.5em; // offset flexbox `gap`
     height: 1.1em;
