--- a/frontend/app/(search)/SearchBar.module.scss
+++ b/frontend/app/(search)/SearchBar.module.scss
@@ -9,9 +9,9 @@
   }
 
   p {
-    margin-right: 1em;
-    line-height: 1.3;
-    font-size: 1rem;
+    margin: 0.5em;
+    line-height: 1.35;
+    font-size: 1.1em;
   }
 
   .inputWrapper {
