add type declarations + webpack loader for .md files

--- a/frontend/app/not-found.module.scss
+++ b/frontend/app/not-found.module.scss
@@ -4,7 +4,7 @@
   max-width: $article-width;
   text-align: center;
   margin: 0 auto 30vw;
-  padding: 0 1em;
+  padding: 1em;
 
   h1 {
     margin-top: 0;
