add 'resuming playback' toast

--- a/frontend/app/_globals.scss
+++ b/frontend/app/_globals.scss
@@ -8,6 +8,7 @@ $tertiary-green-lighter: rgb(88, 230, 88);
 $fg-gray: rgba(255, 255, 255, 0.65);
 $bg-gray: rgba(255, 255, 255, 0.125);
 $bg-gray-lighter: rgba(255, 255, 255, 0.25);
+$bg-gray-lightest: rgba(255, 255, 255, 0.4);
 $bg-gray-opaque: rgb(32, 32, 32);
 $bg-gray-lighter-opaque: rgb(64, 64, 64);
 $bg-gray-lightest-opaque: rgb(96, 96, 96);
