use classNames for concatenation

--- a/frontend/app/(search)/episode/[number]/page.module.scss
+++ b/frontend/app/(search)/episode/[number]/page.module.scss
@@ -9,6 +9,7 @@
   .episodeInfo {
     margin-bottom: 1em;
     padding-top: 1rem;
+    text-wrap: balance;
 
     & > div {
       margin-right: 3em;
