--- a/frontend/app/(search)/episode/[number]/ShareDialog.module.scss
+++ b/frontend/app/(search)/episode/[number]/ShareDialog.module.scss
@@ -19,6 +19,10 @@
     margin: 0 0.5em 0 0;
   }
 
+  time {
+    font-weight: bold;
+  }
+
   .shareActions {
     display: flex;
     justify-content: space-between;
