--- a/frontend/app/(search)/episode/[number]/page.module.scss
+++ b/frontend/app/(search)/episode/[number]/page.module.scss
@@ -18,6 +18,10 @@
       font-size: 2.5em;
       line-height: 1.1;
       text-wrap: balance;
+
+      @include phone-lg {
+        font-size: 2em;
+      }
     }
 
     p {
