--- a/frontend/app/components/Donate.module.scss
+++ b/frontend/app/components/Donate.module.scss
@@ -32,8 +32,10 @@
 }
 
 .popup {
-  $popup-width: min(320px, 100vw);
-  $popup-height: min(580px, 98vh);
+  $popup-width: min(320px, 100%);
+  $popup-height: min(580px, 95%);
+  $overlay-shadow: 0 0 5px rgba(0,0,0, 0.1);
+  $border-color: #ddd;
 
   position: fixed;
   z-index: 1;
@@ -56,16 +58,17 @@
     position: absolute;
     right: 0;
     top: 0;
-    padding: 0.5em;
     background-color: white;
-    border-color: lightgray;
-    border-width: 0 0 1px 1px;
-    border-radius: 0 1em 0 1em;
-    box-shadow: 0 0 5px rgba(0,0,0, 0.2);
+    border-color: $border-color;
+    border-width: 1px;
+    box-shadow: $overlay-shadow;
+    aspect-ratio: 1;
+    translate: 33% -33%;
+    border-radius: 100%;
     
     img {
-      width: 2em;
-      height: 2em;
+      width: 1.5rem;
+      height: 1.5rem;
     }
   }
 
@@ -76,10 +79,11 @@
     width: 100%;
     background-color: white;
     text-align: center;
-    padding: 0.9em;
-    font-size: 0.9em;
-    border-top: 1px solid lightgray;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    border-top: 1px solid $border-color;
     font-weight: 600;
+    box-shadow: $overlay-shadow;
 
     a {
       color: black;
@@ -94,17 +98,18 @@
 
   @include phone-lg {
     right: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     iframe {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       border-radius: 0;
     }
 
     .close {
-      border-top-right-radius: 0;
+      translate: initial;
+      margin: 0.5em;
     }
   }
 }
