--- a/frontend/app/components/Donate.module.scss
+++ b/frontend/app/components/Donate.module.scss
@@ -32,23 +32,21 @@
 }
 
 .popup {
-  $popup-width: min(320px, 100%);
-  $popup-height: min(580px, 95%);
   $overlay-shadow: 0 0 5px rgba(0,0,0, 0.1);
   $border-color: #ddd;
 
   position: fixed;
   z-index: 100;
-  width: $popup-width;
-  height: $popup-height;
+  width: min(320px, 100%);
+  height: min(580px, 95%);
   bottom: 0;
   right: 2em;
   animation: open 1s forwards ease-in-out;
   box-shadow: 0 0 10px rgba(0,0,0, 0.5);
 
   iframe {
-    width: $popup-width;
-    height: $popup-height;
+    width: 100%;
+    height: 100%;
     border: 0;
     border-radius: 1em 1em 0 0;
     background-color: white;
@@ -79,7 +77,7 @@
     width: 100%;
     background-color: white;
     text-align: center;
-    padding: 0.5rem 1rem;
+    padding: 0.75rem;
     font-size: 0.9rem;
     border-top: 1px solid $border-color;
     font-weight: 600;
