switch to external react-kofi-overlay

--- a/frontend/app/layout.scss
+++ b/frontend/app/layout.scss
@@ -146,6 +146,25 @@ footer {
     width: auto;
     vertical-align: sub;
   }
+
+  .donateBtn {
+    background-color: $primary-blue;
+    text-shadow: none;
+    text-decoration: none;
+    text-transform: none;
+    color: black;
+    padding: 0.4em 0.8em;
+    border-radius: 2em;
+    font-weight: bold;
+  
+    &:hover {
+      background-color: $primary-blue-lighter;
+    }
+  
+    &:active {
+      background-color: $primary-blue-darker;
+    }
+  }
 }
 
 #logo {
